2024-11-19: initial build of migrate-instances.py

2024-12-14: 
- initial build of update-server.py
- migrate-instances: Added support for copying over options.txt. Added error handling for if source folder to migrate does not exist.

2025-04-XX: update-server
- added optional commandline parameters:
    - showing public IP is now a parameter (which is disabled by default)
    - option to keep "dump" folder (default behavior is now to delete it)
- general failure exit code is now 1 (was -1)
- new return codes:
    - 1 => general failure
    - 2 => error parsing commandline arguments
- junk files now moved to folder starting with "old_" (was "dump_")
- general refactor
    - server path is no longer converted to literal path before use. Script now uses whatever is passed at runtime.
    - removed functions