@@ -1,11 +1,0 @@
-{
-    "instances-root":"S:\\PrismLauncher\\instances",
-    "folders":[        
-        "resourcepacks",
-        "saves",
-        "screenshots",
-        "mods",
-        "shaderpacks"
-    ],
-    "copy-options":true
-}
