@@ -1,39 +1,35 @@
-import os, shutil, json
+import os, shutil, sys
 
-def getSelection(choices: list, promptFor: str):
+# function: prompt for selection given a list of choices.
+def getSelection(choices: list, prompt_is_for: str):
     while True:
-        index = input(f"Enter numerical index of {promptFor} instance: ")
-        try:
-            index = int(index)
-            break
-        except:
-            print("Invalid selection.")
+        index = input(f"Enter numerical index of {prompt_is_for} instance: ")
+        try: index = int(index); break
+        except: print("Invalid selection.")
     return choices[index]
 
-if not os.path.exists("migrate-instances-config.json"):
-    print("migrate-instances-config.json not found in script's folder.")
-    quit()
-else:
-    with open("migrate-instances-config.json", 'r') as f: args = json.load(f)
+# constants
+INSTANCES_FOLDER = os.path.realpath("/media/matt/games/PrismLauncher/instances/")
+MIGRATE = ["resourcepacks", "saves", "screenshots", "mods", "shaderpacks"]
+COPY_OPTIONS = True
+
+### main execution starts here ###
 
 # detect instances (top-level folders in root); prompt for choice
-root = os.path.realpath(args["instances-root"])
-instances = next(os.walk(root))[1]
-for num, i in enumerate(instances): print(f'{num:02d}', "|", i )
-src = os.path.realpath(os.path.join(root, getSelection(instances, "source"), ".minecraft"))
-dst = os.path.realpath(os.path.join(root, getSelection(instances, "destination"), ".minecraft"))
+instances = next(os.walk(INSTANCES_FOLDER))[1]
+for index, name in enumerate(instances): print(f'{index:02d}', "|", name)
+src = os.path.realpath(os.path.join(INSTANCES_FOLDER, getSelection(instances, "source"), ".minecraft"))
+dst = os.path.realpath(os.path.join(INSTANCES_FOLDER, getSelection(instances, "destination"), ".minecraft"))
 
 # selection integrity checks
-if (not os.path.exists(src)) or (not os.path.exists(dst)):
-    print("At least one of the folders given detected as not a minecraft instance: no .minecraft folder")
-    quit()
-if src == dst:
-    print("Source and destination instances are the same.")
-    quit()
+try:
+    if (not os.path.exists(src)) or (not os.path.exists(dst)): raise Exception("At least one of the folders given detected as not a minecraft instance: no .minecraft folder")
+    if src == dst: raise Exception("Source and destination instances are the same.")
+except Exception as e: print(e); sys.exit(1)
 
 # migrate folders from src to dst
-for folder in args["folders"]:
-    print("\nMigrating folder:", folder)
+for folder in MIGRATE:
+    print(f"Migrating folder: {folder}...")
     if not os.path.exists(os.path.join(src,folder)): print("### Folder does not exist in source instance:", folder) # verify folder exists in source
     else:
         items = [os.path.join(src,folder,i) for i in os.listdir(os.path.join(src,folder))]
@@ -42,19 +38,19 @@ for folder in args["folders"]:
             os.makedirs(migrateDest, exist_ok=True)
             for i in items: 
                 shutil.move(i, migrateDest)
-                print("Moved:",os.path.basename(i), "to", migrateDest)
-        except Exception as e: print("### Move failed for", os.path.basename(i), "...", e)
+                print(f"Moved item {os.path.basename(i)} to {migrateDest}")
+        except Exception as e: print(f"### Failed to move {os.path.basename(i)}: {e}")
 
 # copy over options.txt
-if args["copy-options"]:
+if COPY_OPTIONS:
     try:
-        print("Copying options.txt")
+        print("Copying options.txt...")
         os.remove(os.path.join(dst,"options.txt"))
         shutil.copy(
             os.path.join(src,"options.txt"),
             os.path.join(dst,"options.txt")
         )
-    except Exception as e: print("### Move failed for options.txt...", e)
+    except Exception as e: print(f"### Failed to move options.txt: {e}")
 
-print("\nExecution finished")
-print("Remember to install mod loader and update mods")
+print("\nMigration finished. Remember to install mod loader and update mods!")
+sys.exit(0)
