@@ -4,7 +4,8 @@
 - initial build of update-server.py
 - migrate-instances: Added support for copying over options.txt. Added error handling for if source folder to migrate does not exist.
 
-2025-04-XX: update-server
+2025-04-13: 
+update-server
 - added optional commandline parameters:
     - showing public IP is now a parameter (which is disabled by default)
     - option to keep "dump" folder (default behavior is now to delete it)
@@ -16,3 +17,7 @@
 - general refactor
     - server path is no longer converted to literal path before use. Script now uses whatever is passed at runtime.
     - removed functions
+
+migrate-instances
+- removed json settings file (replaced with constants)
+- slightly reworded some messages
